--- a/htg.cabal
+++ b/htg.cabal
@@ -19,6 +19,6 @@ executable htg
   main-is:             htg.hs
   -- other-modules:       
   other-extensions:    TupleSections, NoMonomorphismRestriction
-  build-depends:       base >=4.6 && <4.7, parsec >=3.1 && <3.2, indents >=0.3 && <0.4, groom >=0.1 && <0.2, MissingH >=1.2 && <1.3, parsec3-numbers >=0.0 && <0.1, containers >=0.5 && <0.6, regexpr >=0.5 && <0.6, process >= 1.1
+  build-depends:       base >=4.6, parsec >=3.1 && <3.2, indents >=0.3 && <0.4, groom >=0.1 && <0.2, MissingH >=1.2 && <1.3, parsec3-numbers >=0.0 && <0.1, containers >=0.5 && <0.6, regexpr >=0.5 && <0.6, process >= 1.1
   -- hs-source-dirs:      
   default-language:    Haskell2010
